--- a/INED_app/templates/users/ver_usuario.html
+++ b/INED_app/templates/users/ver_usuario.html
@@ -11,6 +11,7 @@
 
 {% block content %}
 <form class='registerform' enctype = "multipart/form-data">
+    <h1 class='form-head-title'>Vista de Usuario</h1>
     <div class="user-hd-form-container">
     <h1>{{user.nombres}} {{user.apellido_paterno}}</h1>
     <img class="user-pp" src="{{user.foto.url}}">
