--- a/INED_app/templates/users/administrador/crear_usuario.html
+++ b/INED_app/templates/users/administrador/crear_usuario.html
@@ -1,21 +1,8 @@
-{% extends 'layout.html' %}
-
-{% block menu %}
-<ul>
-    <li><a class='selected' href="{% url 'administrador' %}">Gestionar usuarios</a></li>
-    <li><a href="{% url 'administrador' %}">Gestionar adultos mayores</a></li>
-    <li><a href="{% url 'administrador' %}">Solicitudes de edición</a></li>
-    <li><a href="{% url 'logout' %}">Cerrar Sesión</a></li>
-</ul>
-{% endblock %}
+{% extends 'users/administrador/administrador_layout.html' %}
 
 {% block content %}
-<form class='registerform' method='POST' enctype = "multipart/form-data">
-    <h1 class='form-head-title'>Reactivación de Usuario</h1>
-    <div class="user-hd-form-container">
-    <h1>{{user.nombres}} {{user.apellido_paterno}}</h1>
-    <img class="user-pp" src="{{user.foto.url}}">
-    </div>
+<form class='registerform' method = "POST" enctype = "multipart/form-data">
+    <h1>Regitstrar usuario nuevo</h1>
     {% csrf_token %}
     {{form.as_p}}
     {% if form.errors %}
@@ -38,8 +25,6 @@
             {% endifequal %} 
         {% endfor %}
     {% endif %}
-    <br></br>
-    <button type = "submit" style="cursor:pointer" class = "btn btn-primary">REACTIVAR</button>
+    <button type = "submit" style="cursor:pointer" class = "btn btn-primary">REGISTRAR</button>
 </form>
-
 {% endblock %}
