--- a/INED_app/templates/users/administrador/eliminar_usuario.html
+++ b/INED_app/templates/users/administrador/eliminar_usuario.html
@@ -1,13 +1,4 @@
-{% extends 'layout.html' %}
-
-{% block menu %}
-<ul>
-    <li><a class='selected' href="{% url 'administrador' %}">Gestionar usuarios</a></li>
-    <li><a href="{% url 'administrador' %}">Gestionar adultos mayores</a></li>
-    <li><a href="{% url 'administrador' %}">Solicitudes de edición</a></li>
-    <li><a href="{% url 'logout' %}">Cerrar Sesión</a></li>
-</ul>
-{% endblock %}
+{% extends 'users/administrador/administrador_layout.html' %}
 
 {% block content %}
 <form class='registerform' method='POST' enctype = "multipart/form-data">
