Last Demo with Client

--- a/INED_app/templates/formulario_adulto.html
+++ b/INED_app/templates/formulario_adulto.html
@@ -10,7 +10,7 @@
     {% csrf_token %}
 
     <div class="container-adult-form" id="cont1">
-        <h3>INFORMACIÓN GENERAL</h3>
+        <h3>DATOS DE IDENTIFICACIÓN</h3>
         <div class="adult-form-multiple">
             {{form.nombres.errors}}
             {{form.nombres}}
