--- a/INED_app/templates/users/login.html
+++ b/INED_app/templates/users/login.html
@@ -15,7 +15,7 @@
     <header>
         <div>
             <img src="{% static 'images/logo_CDMX.png' %}" alt="">
-            <h1>INSTITUTO PARA EL ENVEJECIMIENTO DIGNO</h1>
+            <h1>INSTITUTO PARA EL ENVEJECIMIENTO DIGNO | SECRETARÍA DE INCLUSIÓN Y BIENESTAR SOCIAL</h1> 
         </div>
     </header>
 
