--- a/INED_app/templates/layout.html
+++ b/INED_app/templates/layout.html
@@ -19,7 +19,7 @@
     <header>
         <div>
             <img src="{% static 'images/logo_CDMX.png' %}" alt="">
-            <h1>INSTITUTO PARA EL ENVEJECIMIENTO DIGNO</h1>
+            <h1>INSTITUTO PARA EL ENVEJECIMIENTO DIGNO | SECRETARÍA DE INCLUSIÓN Y BIENESTAR SOCIAL</h1> 
         </div>
         <nav>
             {% block menu %}
