--- a/INED_app/templates/layout.html
+++ b/INED_app/templates/layout.html
@@ -8,6 +8,8 @@
     {% load static %}
     <link rel="shortcut icon" href="{% static 'images/icon_CDMX.png' %}">
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    <link rel="stylesheet" href="{% static 'libraries\bootstrap-5.0.0-beta3-dist\css\bootstrap.min.css' %}">
+
 
     {% block extracss %}
     {% endblock %}
@@ -17,9 +19,44 @@
 
 <body>
     <header>
-        <div>
+        <div id="top-bar">
             <img src="{% static 'images/logo_CDMX.png' %}" alt="">
-            <h1>INSTITUTO PARA EL ENVEJECIMIENTO DIGNO | SECRETARÍA DE INCLUSIÓN Y BIENESTAR SOCIAL</h1> 
+            <h1>SECRETARÍA DE INCLUSIÓN Y BIENESTAR SOCIAL<br>INSTITUTO PARA EL ENVEJECIMIENTO DIGNO</h1>
+            <!-- Button trigger modal -->
+            <button id="tecbutton" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                Autores
+                <img id="teclogo" src="{% static 'images/itesm_logo.jpg' %}" alt="">
+            </button>
+
+            <!-- Modal -->
+            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title fw-bold" id="exampleModalLabel">EQUIPO DESARROLLADOR</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <a class="fw-bold" href="https://tec.mx/es">INSTITUTO TECNOLÓGICO Y DE ESTUDIOS SUPERIORES DE MONTERREY</a>
+                            <hr>
+                            <h5 class="mt-3 ">DIRECTORA DEL PROYECTO</h5>
+                            <span>Dra. Juana Julieta Noguez Monroy</span>
+                            <hr>
+                            <h5 class="mt-3 ">INTEGRANTES DEL EQUIPO</h5>
+                            <span>
+                                Carlos Andrés Conde Besil <br>
+                                Samuel Kareem Cueto González <br>
+                                Manuel Herrasti González <br>
+                                Ángel Heredia Vázquez
+                            </span>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <nav>
             {% block menu %}
@@ -52,6 +89,9 @@
         </div>
     </footer>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+    crossorigin="anonymous"></script>
 {% block extrajs %}
 {% endblock %}
 
