--- a/INED_app/templates/users/login.html
+++ b/INED_app/templates/users/login.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% load static %}
+    <link rel="stylesheet" href="{% static 'libraries\bootstrap-5.0.0-beta3-dist\css\bootstrap.min.css' %}">
     <link rel="shortcut icon" href="{% static 'images/icon_CDMX.png' %}">
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     <title>INED</title>
@@ -13,27 +14,63 @@
 
 <body>
     <header>
-        <div>
+        <div id="top-bar">
             <img src="{% static 'images/logo_CDMX.png' %}" alt="">
-            <h1>INSTITUTO PARA EL ENVEJECIMIENTO DIGNO | SECRETARÍA DE INCLUSIÓN Y BIENESTAR SOCIAL</h1> 
+            <h1>SECRETARÍA DE INCLUSIÓN Y BIENESTAR SOCIAL<br>INSTITUTO PARA EL ENVEJECIMIENTO DIGNO</h1>
+            <!-- Button trigger modal -->
+            <button id="tecbutton" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                Autores
+                <img id="teclogo" src="{% static 'images/itesm_logo.jpg' %}" alt="">
+            </button>
+
+            <!-- Modal -->
+            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title fw-bold" id="exampleModalLabel">EQUIPO DESARROLLADOR</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <a class="fw-bold" href="https://tec.mx/es">INSTITUTO TECNOLÓGICO Y DE ESTUDIOS SUPERIORES DE MONTERREY</a>
+                            <hr>
+                            <h5 class="mt-3 ">DIRECTORA DEL PROYECTO</h5>
+                            <span>Dra. Juana Julieta Noguez Monroy</span>
+                            <hr>
+                            <h5 class="mt-3 ">INTEGRANTES DEL EQUIPO</h5>
+                            <span>
+                                Carlos Andrés Conde Besil <br>
+                                Samuel Kareem Cueto González <br>
+                                Manuel Herrasti González <br>
+                                Ángel Heredia Vázquez
+                            </span>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </header>
 
     <div class="logbox">
         <form class="logform" method="POST" action="">
-        {% csrf_token %}
-        <h1 class="logtitle">Inicia sesión</h1>
-            
+            {% csrf_token %}
+            <h1 class="logtitle">Inicia sesión</h1>
+
             <label for="username">Nombre de usuario:</label>
-            <input autocomplete="off" class="field" type="text" placeholder="Escribe tu nombre de usuario" name="username">
-            
+            <input autocomplete="off" class="field" type="text" placeholder="Escribe tu nombre de usuario"
+                name="username">
+
             <label for="password">Contraseña:</label>
             <input class="field" type="password" placeholder="Escribe tu contraseña" name="password">
-        
+
             {% if messages %}
-                {% for message in messages %}
-                    <h2 class="error">{{message}}</h2>
-                {% endfor %}
+            {% for message in messages %}
+            <h2 class="error">{{message}}</h2>
+            {% endfor %}
             {% endif %}
             <input style="cursor:pointer" class="boton1" type="submit" value="Iniciar sesión">
         </form>
@@ -59,7 +96,12 @@
 
 <script>
     var actual = "{{actual}}"
+
 </script>
 <script src="{% static 'js/mainscript.js' %}"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+    crossorigin="anonymous"></script>
+
 
 </html>
