Sección de autores editada

--- a/INED_app/templates/layout.html
+++ b/INED_app/templates/layout.html
@@ -24,7 +24,7 @@
             <h1>SECRETARÍA DE INCLUSIÓN Y BIENESTAR SOCIAL<br>INSTITUTO PARA EL ENVEJECIMIENTO DIGNO</h1>
             <!-- Button trigger modal -->
             <button id="tecbutton" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                Autores
+                Autores del Software
                 <img id="teclogo" src="{% static 'images/itesm_logo.jpg' %}" alt="">
             </button>
 
